SubBt/force-app/main/default/objects/BT_Payment_Line__c/BT_Payment_Line__c.object-meta.xml
<CustomObject>
    <description>We are not using this Object</description>
    <label>Not Using</label>
    <nameField>
        <label>Payment Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>