SubBt/force-app/main/default/objects/BT_Payment_Line__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>BT_Payments__c</referenceTo>
    <relationshipName>Payment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>