SubBt/force-app/main/default/objects/BT_Payment_Line__c/fields/Payment_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Line_Number__c</fullName>
    <displayFormat>PL-{0000}</displayFormat>
    <label>Payment Line Number</label>
    <type>AutoNumber</type>
</CustomField>